--- a/.github/workflows/md5_check_initial-data.yml
+++ b/.github/workflows/md5_check_initial-data.yml
@@ -8,13 +8,7 @@ name: Prevent manual changes of initial-data.json without md5 hash
 # 1. Change the file
 # 2. Get the md5sum for changed initial-dta.json
 # 3. Change the md5-check-literal in this workflow-file
-on:
-  push:
-    paths:
-      - "docker/initial-data.json"
-  pull_request:
-    paths:
-      - "docker/initial-data.json"
+on: pull_request
 jobs:
   validate-data:
     name: Validate example-data.json and initial-data.json
