Updated README. Updated initial-data.json to new format. Updated example-data.json to new format. Updated backend and datastore. Disabled check of unmigrated initial data. Added announcement workflow.

--- a/.github/workflows/announce-model-updates.yml
+++ b/.github/workflows/announce-model-updates.yml
@@ -3,8 +3,7 @@ name: Announce model updates
 on:
   push:
     branches:
-      - openslides4-dev
-      # - master
+      - master
     paths:
       - 'docs/models.yml'
 
