--- a/.github/workflows/announce-initial-data-updates.yml
+++ b/.github/workflows/announce-initial-data-updates.yml
@@ -1,15 +1,15 @@
 ---
-name: Announce permission updates
+name: Announce initial-data.json updates
 on:
   push:
     branches:
       - master
     paths:
-      - 'docs/permission.yml'
+      - 'docker/initial-data.json'
 
 jobs:
   announce-update:
-    name: 'Announce updates to permission.yml'
+    name: 'Announce updates to initial-data.json'
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     steps:
@@ -21,4 +21,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          filename: .github/announcement_templates/updates-to-permissions.md
+          filename: .github/announcement_templates/updates-to-initial-data.md
