Integration tests using cypress
Test client integration (client loads)
Test auth integration (client logs in)
Test backend integration (accept request)
  - broken
Test autoupdate integration (sends au to client)

Add manual cypress tests
Add dockered cypress tests

Add Readme
Add test execution to makefile
Add test execution to github-actions

TODO:
- Create user for tests
- flush db after every test

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,13 @@ dev-commands/export.json
 /docker/secrets/auth_*_key
 docker/secrets/*.env
 
+# Integration testing
+/integration/results
+/integration/cypress/downloads
+/integration/cypress/screenshots
+/integration/cypress/videos
+/integration/node_modules
+
 # Old OS3 files and folders
 .coverage
 .mypy_cache
@@ -36,7 +43,7 @@ tests
 .venv/
 .virtualenv/
 .vscode/
-package-lock.json
+client/package-lock.json
 server/
 # OS3+-Submodules
 /autoupdate/
