Adds the perm 'motion.can_forward_to_this'

--- a/docs/permission.yml
+++ b/docs/permission.yml
@@ -43,6 +43,7 @@ motion:
             can_see:
         can_create:
             can_see:
+            can_forward_to_this:
         can_create_amendments:
             can_see:
     can_support:
