add auto https support + manage router by header
switch from caddy file to native json

--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,8 +1,10 @@
 FROM caddy:2.3.0-alpine
 
-COPY Caddyfile /etc/caddy/Caddyfile
+RUN apk update && apk add --no-cache jq gettext
+
+COPY caddy_base.json /caddy_base.json
 COPY entrypoint /entrypoint
 COPY certs /certs
 
 ENTRYPOINT ["/entrypoint"]
-CMD ["caddy", "run", "--config", "/etc/caddy/Caddyfile", "--adapter", "caddyfile"]
+CMD ["caddy", "run", "--config", "/etc/caddy/config.json"]
