--- a/docs/models.yml
+++ b/docs/models.yml
@@ -403,47 +403,47 @@ theme:
     restriction_mode: A
     type: string
     required: true
-  accent-100:
+  accent_100:
     restriction_mode: A
     type: color
-  accent-200:
+  accent_200:
     restriction_mode: A
     type: color
-  accent-300:
+  accent_300:
     restriction_mode: A
     type: color
-  accent-400:
+  accent_400:
     restriction_mode: A
     type: color
-  accent-50:
+  accent_50:
     restriction_mode: A
     type: color
-  accent-500:
+  accent_500:
     restriction_mode: A
     type: color
     required: true
-  accent-600:
+  accent_600:
     restriction_mode: A
     type: color
-  accent-700:
+  accent_700:
     restriction_mode: A
     type: color
-  accent-800:
+  accent_800:
     restriction_mode: A
     type: color
-  accent-900:
+  accent_900:
     restriction_mode: A
     type: color
-  accent-A100:
+  accent_A100:
     restriction_mode: A
     type: color
-  accent-A200:
+  accent_A200:
     restriction_mode: A
     type: color
-  accent-A400:
+  accent_A400:
     restriction_mode: A
     type: color
-  accent-A700:
+  accent_A700:
     restriction_mode: A
     type: color
   background_color:
@@ -452,90 +452,90 @@ theme:
   is_dark_theme:
     restriction_mode: A
     type: boolean
-  primary-100:
+  primary_100:
     restriction_mode: A
     type: color
-  primary-200:
+  primary_200:
     restriction_mode: A
     type: color
-  primary-300:
+  primary_300:
     restriction_mode: A
     type: color
-  primary-400:
+  primary_400:
     restriction_mode: A
     type: color
-  primary-50:
+  primary_50:
     restriction_mode: A
     type: color
-  primary-500:
-    restriction_mode: A
-    type: color
-    required: true
-  primary-600:
-    restriction_mode: A
-    type: color
-  primary-700:
-    restriction_mode: A
-    type: color
-  primary-800:
-    restriction_mode: A
-    type: color
-  primary-900:
-    restriction_mode: A
-    type: color
-  primary-A100:
-    restriction_mode: A
-    type: color
-  primary-A200:
-    restriction_mode: A
-    type: color
-  primary-A400:
-    restriction_mode: A
-    type: color
-  primary-A700:
-    restriction_mode: A
-    type: color
-  warn-100:
-    restriction_mode: A
-    type: color
-  warn-200:
-    restriction_mode: A
-    type: color
-  warn-300:
-    restriction_mode: A
-    type: color
-  warn-400:
-    restriction_mode: A
-    type: color
-  warn-50:
-    restriction_mode: A
-    type: color
-  warn-500:
+  primary_500:
     restriction_mode: A
     type: color
     required: true
-  warn-600:
+  primary_600:
     restriction_mode: A
     type: color
-  warn-700:
+  primary_700:
     restriction_mode: A
     type: color
-  warn-800:
+  primary_800:
     restriction_mode: A
     type: color
-  warn-900:
+  primary_900:
     restriction_mode: A
     type: color
-  warn-A100:
+  primary_A100:
     restriction_mode: A
     type: color
-  warn-A200:
+  primary_A200:
     restriction_mode: A
     type: color
-  warn-A400:
+  primary_A400:
     restriction_mode: A
     type: color
-  warn-A700:
+  primary_A700:
+    restriction_mode: A
+    type: color
+  warn_100:
+    restriction_mode: A
+    type: color
+  warn_200:
+    restriction_mode: A
+    type: color
+  warn_300:
+    restriction_mode: A
+    type: color
+  warn_400:
+    restriction_mode: A
+    type: color
+  warn_50:
+    restriction_mode: A
+    type: color
+  warn_500:
+    restriction_mode: A
+    type: color
+    required: true
+  warn_600:
+    restriction_mode: A
+    type: color
+  warn_700:
+    restriction_mode: A
+    type: color
+  warn_800:
+    restriction_mode: A
+    type: color
+  warn_900:
+    restriction_mode: A
+    type: color
+  warn_A100:
+    restriction_mode: A
+    type: color
+  warn_A200:
+    restriction_mode: A
+    type: color
+  warn_A400:
+    restriction_mode: A
+    type: color
+  warn_A700:
     restriction_mode: A
     type: color
   # Link to organization
