--- a/docs/models.yml
+++ b/docs/models.yml
@@ -118,6 +118,7 @@ organization:
     to: organization_tag/organization_id
   default_theme_id:
     type: relation
+    required: true
     restriction_mode: A
     to: theme/default_theme_for_organization_id
   theme_ids:
@@ -540,6 +541,7 @@ theme:
     to: organization/default_theme_id
     type: relation
   organization_id:
+    required: true
     restriction_mode: A
     to: organization/theme_ids
     type: relation
