Revert "PR6246 mediafile.list_of_speakers not required, because of directories"
This reverts commit 851e54077f4f0b52f93c6fa8947890252e3ae1a3.

--- a/docs/models.yml
+++ b/docs/models.yml
@@ -2882,7 +2882,7 @@ mediafile:
     on_delete: CASCADE
     equal_fields: meeting_id
     restriction_mode: B
-    required: false
+    required: true
   projection_ids:
     type: relation-list
     to: projection/content_object_id
