Add vote service to OS4 setup
Integrate vote service, makes according changes to configuration
Updates the client to integrate the vote service
Updates the backend to integrate the vote service

--- a/.gitmodules
+++ b/.gitmodules
@@ -30,3 +30,7 @@
 	path = openslides-icc-service
 	url = https://github.com/OpenSlides/openslides-icc-service.git
 	branch = main
+[submodule "openslides-vote-service"]
+	path = openslides-vote-service
+	url = https://github.com/OpenSlides/openslides-vote-service.git
+	branch = main
