--- a/docker/services.env
+++ b/docker/services.env
@@ -32,3 +32,11 @@ MEDIA_DATABASE_NAME=openslides
 
 MANAGE_HOST=manage
 MANAGE_PORT=9008
+
+VOTE_HOST=vote
+VOTE_PORT=9013
+VOTE_REDIS_HOST=cache
+VOTE_DATABASE_HOST=postgres
+VOTE_DATABASE_USER=openslides
+VOTE_DATABASE_PASSWORD=openslides
+VOTE_DATABASE_NAME=openslides
