--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   run-cypress:
-    name: "Runs integration tests in cypress"
+    name: 'Runs integration tests in cypress'
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -15,8 +15,11 @@ jobs:
       - name: Build and run OS4 Dev
         run: make run-dev ARGS="-d"
 
-      - name: Run integration tests (cypress docker)
-        run: make cypress-docker
-
-      - name: Stop OS4
-        run: make stop-dev
+      - name: Run integration tests (cypress)
+        uses: cypress-io/github-action@v2
+        with:
+          working-directory: integration
+          wait-on: 'https://localhost:8000'
+          wait-on-timeout: 300
+        env:
+          NODE_TLS_REJECT_UNAUTHORIZED: 0
