Fix ICC integration
Updates the ICC Service
Changes the ICC port to 9007
Adjust the proxy
Adjust services.env

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -96,6 +96,8 @@ services:
     volumes:
       - ../openslides-icc-service/cmd:/root/cmd
       - ../openslides-icc-service/internal:/root/internal
+    ports:
+      - "9007:9007"
 
   auth:
     image: openslides-auth-dev
