--- a/docker/services.env
+++ b/docker/services.env
@@ -22,6 +22,9 @@ AUTH_HOST=auth
 AUTH_PORT=9004
 CACHE_HOST=cache
 CACHE_PORT=6379
+
+ICC_PORT=9007
+ICC_HOST=icc
 ICC_REDIS_HOST=message-bus
 ICC_REDIS_PORT=6379
 
