--- a/docker/services.env
+++ b/docker/services.env
@@ -43,3 +43,6 @@ VOTE_DATABASE_HOST=postgres
 VOTE_DATABASE_USER=openslides
 VOTE_DATABASE_PASSWORD=openslides
 VOTE_DATABASE_NAME=openslides
+
+OTEL_EXPORTER_JAEGER_ENDPOINT=http://jaeger:14268/api/traces
+OTEL_EXPORTER_OTLP_ENDPOINT=collector:4318
