--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,5 +1,10 @@
 FROM caddy:2.3.0-alpine
 
+LABEL org.opencontainers.image.title="OpenSlides Proxy"
+LABEL org.opencontainers.image.description="The proxy is the entrypoint for traffic going into an OpenSlides instance."
+LABEL org.opencontainers.image.licenses="MIT"
+LABEL org.opencontainers.image.source="https://github.com/OpenSlides/OpenSlides/tree/master/proxy"
+
 RUN apk update && apk add --no-cache jq gettext
 
 COPY caddy_base.json /caddy_base.json
