Fixes npm ng-particles versions

--- a/client/package.json
+++ b/client/package.json
@@ -67,7 +67,7 @@
         "lz4js": "^0.2.0",
         "material-design-icons-iconfont": "6.1.0",
         "moment": "^2.27.0",
-        "ng-particles": "^2.6.0",
+        "ng-particles": "2.6.0",
         "ng2-charts": "^2.4.0",
         "ng2-pdf-viewer": "^6.4.1",
         "ngx-device-detector": "^2.0.0",
@@ -78,10 +78,10 @@
         "pdfjs-dist": "2.5.207",
         "pdfmake": "^0.1.68",
         "po2json": "^1.0.0-beta-2",
-        "rxjs": "^6.6.2",
+        "rxjs": "6.6.2",
         "tinymce": "5.7.1",
         "tslib": "^2.0.0",
-        "tsparticles": "^1.23.0",
+        "tsparticles": "1.23.0",
         "video.js": "^7.8.4",
         "zone.js": "~0.11.4"
     },
